--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,224 +1,166 @@
 <%- include("../partials/adminHeader") %>
 
 <style>
-    .text-success {
-    color: green;
-}
-
-.text-danger {
-    color: red;
-}
-
+.text-success { color: green; }
+.text-danger { color: red; }
 </style>
-
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
-
 </head>
 
 <div class="content-header">
     <div>
         <h2 class="content-title card-title">Products</h2>
-        
     </div>
-   
 </div>
+
 <header class="card-header text-center mb-20">
     <form action="/admin/products/" method="get" class="d-inline">
         <div class="input-group input-group-sm border border-1 border-grey rounded-pill" style="width: 500px; margin-left: 230px;">
             <input type="text" class="form-control border-0 rounded-pill" placeholder="Search products or brands" name="search">
-            <button class="btn  border-0" type="submit">Search</button>
+            <button class="btn border-0" type="submit">Search</button>
         </div>
     </form>
-</header><!-- card-header end// -->
+</header>
 
-
-
-
-
-
-
-
-
-
-
-    <div class="right mt-5">
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col"><b>Product name</b></th>
-                <th scope="col"><b>Brand</b></th>
-                <th scope="col"><b>Category</b></th>
-                <th scope="col"><b>Regular Price</b></th>
-                <th scope="col"><b>Sale Price</b></th>
-                <th scope="col"><b>Stock</b></th>
-                <th scope="col"><b>Offer Price</b></th>
-                <th scope="col"><b>Offer</b></th>
-                
-                <th scope="col"><b>Action</b></th>
-                <th scope="col"><b>Edit</b></th>
-              </tr>
-            </thead>
-            <tbody>
-                <% for(let i = 0; i < data.length; i++) {    %>
-                    <tr>
-                        <td><%= data[i].productName %></td>
-                        <td><%= data[i].brand %></td>
-                        <td><%= data[i].category %></td>
-                        <td>₹<%= data[i].regularPrice %></td>
-                        <td>₹<%= data[i].salePrice %></td>
-                        <td class="<%= data[i].quantity > 200 ? 'text-success' : 'text-danger' %>">
-                            <%= data[i].quantity %>
-                        </td>
-                        
-                        <td>
-                            <% if (locals.data[i].productOffer) { %>
-                                <%= data[i].productOffer %>%
-                                    <% }else{ %>
-                                        0%
-                                        <% } %>
-                        </td>
-                        <td>
-                            <% if (locals.data[i].productOffer===0) { %>
-                                <button class="btn btn-info" onclick="addOffer('<%= data[i]._id %>')"
-                                    style="width: 100px;">
-                                    <a href="#" class="text-white">Add Offer</a>
-                                </button>
-                                <% }else{ %>
-                                    <button class="btn btn-info"
-                                        onclick="removeOffer('<%= data[i]._id %>')"
-                                        style="width: 100px;">
-                                        <a href="#" class="text-white">Remove</a>
-                                    </button>
-                                    <% } %>
-                        </td>
-                        <td> 
-                           <% if (data[i].isBlocked === false) { %>
-                                <button class="btn btn-danger" style="width: 80px;">
-                                    <a href="/admin/blockProduct?id=<%= data[i]._id %>" class="text-white" style="text-decoration: none;">Block</a>
-                                </button>
-                           <% } else { %>
-                                <button class="btn btn-success" style="width: 80px;">
-                                    <a href="/admin/unBlockProduct?id=<%= data[i]._id %>" class="text-white" style="text-decoration: none;">Unblock</a>
-                                </button> 
-                           <% } %>
-                        </td>
-                     <td>
+<div class="right mt-5">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th><b>Product name</b></th>
+                <th><b>Brand</b></th>
+                <th><b>Category</b></th>
+                <th><b>Regular Price</b></th>
+                <th><b>Sale Price</b></th>
+                <th><b>Stock</b></th>
+                <th><b>Offer Price</b></th>
+                <th><b>Offer</b></th>
+                <th><b>Action</b></th>
+                <th><b>Edit</b></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% data.forEach((product, i) => { %>
+                <tr>
+                    <td><%= product.productName %></td>
+                    <td><%= product.brand %></td>
+                    <td><%= product.category %></td>
+                    <td>₹<%= product.regularPrice %></td>
+                    <td>₹<%= product.salePrice %></td>
+                    <td class="<%= product.quantity > 200 ? 'text-success' : 'text-danger' %>"><%= product.quantity %></td>
+                    <td><%= product.productOffer ? product.productOffer + '%' : '0%' %></td>
+                    <td>
+                        <% if (!product.productOffer || product.productOffer === 0) { %>
+                            <button class="btn btn-info" onclick="confirmAddOffer('<%= product._id %>')" style="width: 100px;">Add Offer</button>
+                        <% } else { %>
+                            <button class="btn btn-warning" onclick="confirmRemoveOffer('<%= product._id %>')" style="width: 100px;">Remove Offer</button>
+                        <% } %>
+                    </td>
+                    <td>
+                        <% if (!product.isBlocked) { %>
+                            <button class="btn btn-danger" onclick="confirmBlock('<%= product._id %>')" style="width: 80px;">Block</button>
+                        <% } else { %>
+                            <button class="btn btn-success" onclick="confirmUnblock('<%= product._id %>')" style="width: 80px;">Unblock</button>
+                        <% } %>
+                    </td>
+                    <td>
                         <button class="btn btn-info" style="width: 80px;">
-                            <a href="/admin/editProduct?id=<%= data[i]._id %>" class="text-white" style="text-decoration: none;">Edit</a>
+                            <a href="/admin/editProduct?id=<%= product._id %>" class="text-white" style="text-decoration: none;">Edit</a>
                         </button>
-                     </td>
-                    </tr>
-                <% } %>
-            </tbody>
-            
-          </table>
-    </div>
-
-        
-       
-        
-    </div> <!-- card-body end// -->
-</div> <!-- card end// -->
+                    </td>
+                </tr>
+            <% }) %>
+        </tbody>
+    </table>
+</div>
 
 <div class="container mt-3">
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center mb-20" style="margin-right: 200px;">
-
+        <ul class="pagination justify-content-center mb-20">
             <% for (let i = 1; i <= totalPages; i++) { %>
-                <li class="page-item <%=(i === currentPage) ? 'active' : '' %>">
+                <li class="page-item <%= i === currentPage ? 'active' : '' %>">
                     <a class="page-link" href="?page=<%= i %>"><%= i %></a>
                 </li>
             <% } %>
-
         </ul>
     </nav>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-
 <script>
-
-    async function addOffer(productId){
-        // alert("hi")
-        const { value: amount } = await Swal.fire({
-                title: 'Offer in percentage',
-                input: 'number',
-                inputLabel: 'Percentage',
-                inputPlaceholder: '%'
-            })
-
-            $.ajax({
-                url: "/admin/addProductOffer",
-                method: "post",
-                data: {
-                    percentage: amount,
-                    productId : productId
-                },
-                success: (response) => {
-                    console.log(response);
-                    if (response.status === true) {
-                        location.reload()
-                        // Swal.fire('Offer added', 'The offer has been removed.', 'success');
-
-                    } else {
-                        alert("failed")
-                    }
-                }
-            })
-        }
-
-        function removeOffer(productId){
-            // alert(productId)
-            try {
-                Swal.fire({
-                    title: 'Remove Offer',
-                    text: 'Are you sure you want to remove this offer?',
-                    icon: 'warning',
-                    showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: 'Yes, remove it!',
-                    timer: 5000,  // 5 seconds
-                    timerProgressBar: true
-                }).then(async (result) => {
-                    if (result.isConfirmed) {
-                        $.ajax({
-                            url: "/admin/removeProductOffer",
-                            method: "post",
-                            data: {
-                                productId: productId
-                            },
-                            success: (response) => {
-                            console.log(response);
-                            if (response.status === true) {
-                                // Swal.fire('Removed!', 'The offer has been removed.', 'success');
-                                location.reload()
-                            } else if (response.status === false) {
-                                Swal.fire('failed');
-                            } else {
-                                alert("failed")
-                            }
-                        }
-                        });
-
-                        
-                    }
-                });
-            } catch (error) {
-                console.error(error);
+async function confirmAddOffer(productId) {
+    const { value: percentage } = await Swal.fire({
+        title: 'Add Offer',
+        input: 'number',
+        inputLabel: 'Enter offer in %',
+        inputPlaceholder: '%',
+        showCancelButton: true,
+        confirmButtonText: 'Add Offer'
+    });
+    if (percentage) {
+        $.post("/admin/addProductOffer", { percentage, productId }, function(response) {
+            if (response.status) {
+                Swal.fire('Success', 'Offer added successfully', 'success').then(() => location.reload());
+            } else {
+                Swal.fire('Error', 'Failed to add offer', 'error');
             }
+        });
+    }
+}
+
+function confirmRemoveOffer(productId) {
+    Swal.fire({
+        title: 'Remove Offer?',
+        text: 'Are you sure you want to remove this offer?',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Yes, remove',
+        cancelButtonText: 'Cancel'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            $.post("/admin/removeProductOffer", { productId }, function(response) {
+                if (response.status) {
+                    Swal.fire('Removed!', 'Offer removed successfully', 'success').then(() => location.reload());
+                } else {
+                    Swal.fire('Error', 'Failed to remove offer', 'error');
+                }
+            });
         }
+    });
+}
 
-    
+function confirmBlock(productId) {
+    Swal.fire({
+        title: 'Block Product?',
+        text: 'Are you sure you want to block this product?',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Yes, block',
+        cancelButtonText: 'Cancel'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            window.location.href = `/admin/blockProduct?id=${productId}`;
+        }
+    });
+}
 
-
+function confirmUnblock(productId) {
+    Swal.fire({
+        title: 'Unblock Product?',
+        text: 'Are you sure you want to unblock this product?',
+        icon: 'question',
+        showCancelButton: true,
+        confirmButtonText: 'Yes, unblock',
+        cancelButtonText: 'Cancel'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            window.location.href = `/admin/unBlockProduct?id=${productId}`;
+        }
+    });
+}
 </script>
-
-
 
 <%- include("../partials/adminFooter") %>
