--- a/views/partials/shopHeader.ejs
+++ b/views/partials/shopHeader.ejs
@@ -1,98 +1,145 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
-
-
-<!-- Mirrored from wp.alithemes.com/html/evara/evara-frontend/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 15 Jul 2023 10:04:24 GMT -->
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Think Thankz CCTV</title>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/user-assets/imgs/theme/favicon.svg">
-    <!-- Template CSS -->
+    <link rel="shortcut icon" href="/user-assets/imgs/theme/favicon.svg">
+
+    <!-- Evara Theme CSS -->
     <link rel="stylesheet" href="/user-assets/css/maind134.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" >
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> <!-- Add jQuery library -->
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    
 
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+    <!-- REQUIRED JS (order matters) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- SVGInject (MANDATORY for Evara icons) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-injector/1.1.3/svg-injector.min.js"></script>
+
+    <!-- FORCE OVERRIDES -->
+    <style>
+        .header-middle {
+            padding: 15px 0;
+            display: block !important;
+        }
+
+        .header-wrap {
+            display: flex !important;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+ 
+
+        .search-style-2 input {
+            width: 260px;
+        }
+
+        .header-action {
+            display: flex !important;
+            align-items: center;
+            gap: 18px;
+        }
+
+        /* FORCE ICON VISIBILITY (Evara hides them) */
+        .header-action img {
+            display: inline-block !important;
+            visibility: visible !important;
+            opacity: 1 !important;
+            width: 24px;
+            height: auto;
+            cursor: pointer;
+        }
+
+        /* FIX DROPDOWN VISIBILITY */
+        .dropdown-menu {
+            display: none;
+        }
+
+        .dropdown.show .dropdown-menu {
+            display: block;
+            opacity: 1;
+            visibility: visible;
+        }
+    </style>
 </head>
 
 <body>
 
-     
-    
-      
-            <div class="header-middle header-middle-ptb-1 d-none d-lg-block">
-                <div class="container">
-                    <div class="header-wrap">
-                        <div class="logo logo-width-1">
-                            <a href="/"><img src="/user-assets/imgs/theme/ThinkThankz-logo/cover.png"style="width: 300px; height: 200px;" alt="logo"></a>
-                        </div>
-                        <div class="header-right ">
-                            <div class="search-style-2 pl-80">
-                                <form action="/search">
-                                    <input type="text" id="filterItem" name="search" class="form-control" placeholder="Search for items...">
-                                </form>
-                            </div>
-                            <div class="header-action-right">
-                                <div class="header-action-2">
-                                    <div class="header-action-icon-2">
-                                        <a href="/wishlist">
-                                            <img class="svgInject" alt="Evara" src="/user-assets/imgs/theme/icons/icon-heart.svg">
-                                            <!-- <span class="pro-count blue">4</span> -->
-                                        </a>
-                                    </div>
-                                    <div class="header-action-icon-2">
-                                        <a class="mini-cart-icon" href="/cart">
-                                            <img alt="Evara" src="/user-assets/imgs/theme/icons/icon-cart.svg">
-                                            <!-- <span class="pro-count blue">2</span> -->
-                                        </a>
-                                        <% if (locals.user) { %>
-                                            <!-- Displayed when the user is logged in -->
-                                            <li class="dropdown nav-item">
-                                              <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false">
-                                                <!-- Uncomment the following line if you want to use an icon -->
-                                                <!-- <i class="fas fa-/user-circle"></i> -->
-                                                <img class="svgInject" alt="Evara" src="/user-assets/imgs/theme/icons/user-profile.svg" style="height: 25px; width: 25px; margin-top: 2px;">
-                                              </a>
-                                              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
-                                                <a class="dropdown-item" href="/profile"><i class="material-icons md-perm_identity"></i> Profile</a>
-                                                <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item text-danger" href="/logout"><i class="material-icons md-exit_to_app"></i> Logout</a>
-                                              </div>
-                                            </li>
-                                          <% } else { %>
-                                            <!-- Displayed when the user is not logged in -->
-                                            <div class="single-mobile-header-info ml-25 pr-5">
-                                              <a href="/login">Sign Up</a>
-                                            </div>
-                                          <% } %>
-                                          
-                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+<div class="header-middle">
+    <div class="container">
+        <div class="header-wrap">
+
+            <!-- LOGO -->
+              <div class="logo">
+                    <a href="/">
+                        <img src="/user-assets/imgs/theme/ThinkThankz-logo/cover.png"
+                             alt="ThinkThankz" style="width:260px;">
+                    </a>
+                </div>
+
+            <!-- SEARCH -->
+            <div class="search-style-2">
+                <form action="/search">
+                    <input type="text" name="search" class="form-control"
+                           placeholder="Search for items...">
+                </form>
+            </div>
+
+            <!-- ACTIONS -->
+            <div class="header-action">
+
+                <!-- Wishlist -->
+          <a href="/wishlist" class="position-relative">
+    <img src="/user-assets/imgs/theme/icons/icon-heart.svg" alt="Wishlist">
+    <% if (wishlistCount > 0) { %>
+        <span class="badge badge-danger cart-badge"><%= wishlistCount %></span>
+    <% } %>
+</a>
+
+
+                <!-- Cart -->
+               <a href="/cart" class="position-relative">
+    <img src="/user-assets/imgs/theme/icons/icon-cart.svg" alt="Cart">
+    <% if (cartCount > 0) { %>
+        <span class="badge badge-success cart-badge"><%= cartCount %></span>
+    <% } %>
+</a>
+
+
+                <!-- User -->
+                <% if (locals.user) { %>
+                <div class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <img class="svgInject"
+                             src="/user-assets/imgs/theme/icons/user-profile.svg"
+                             alt="User">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="/profile">Profile</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item text-danger" href="/logout">Logout</a>
                     </div>
                 </div>
+                <% } else { %>
+                    <a href="/login">Sign Up</a>
+                <% } %>
+
             </div>
- 
-      
+        </div>
+    </div>
+</div>
 
+<!-- INIT SVG INJECT -->
+<script>
+    SVGInjector(document.querySelectorAll("img.svgInject"));
+</script>
 
-
-
-
-
-
+</body>
+</html>
