--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -16,7 +16,7 @@
 
 
 </style>
-    <section class="mt-50 mb-50">
+    <section class="mt-50 mb-50 mt-90">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -141,7 +141,7 @@
                                 </div>
 
 
-
+<!-- 
                                 <div class="row mt-60">
                                     <div class="col-12">
                                         <h3 class="section-title style-1 mb-30">Related products</h3>
@@ -195,7 +195,7 @@
 
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
 
                                 <!-- <div class="banner-img banner-big wow fadeIn f-none animated mt-50">
