--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header") %>
 
-<div class="container col-4 login_wrap widget-taber-content p-30 background-white border-radius-5">
+<div class="container col-4 login_wrap widget-taber-content p-30 background-white border-radius-5 mt-80">
     <div class="padding_eight_all bg-white">
         <div class="heading_s1">
             <h3 class="mb-30">Create an Account</h3>
